Add GH build actions, add license headers to files (#19)
Closes #18